--- a/docs/00_intro/20_data_life_cycle.mdx
+++ b/docs/00_intro/20_data_life_cycle.mdx
@@ -19,7 +19,7 @@ To ensure compliance, professional handling of research data is of particular im
 
 ## Phase 1: Experiment Design
 
-In phase 1, you start with the **planning of your experiment design** as well as your **data management** ([formats](/docs/format_standards), [storage](/docs/data_storage) …). During this planning phase, already **existing data** should be located and the **legal framework** for use should be checked.
+In phase 1, you start with the **planning of your experiment design** as well as planning your **data management** ([formats](/docs/format_standards), [storage](/docs/data_storage) …). During this planning phase, already **existing data** should be located and the **legal framework** for use should be checked.
 You should be aware of the various **requirements** of the research funder, your university, your institution, and your community and should write a **first draft** of your [data management plan (DMP)](/docs/dmp). In this first draft, you should define the **responsibilities**.
 
 ## Phase 2: Experiment/ Data Collection
