--- a/docs/50_data_publication/00_data_publication.mdx
+++ b/docs/50_data_publication/00_data_publication.mdx
@@ -28,7 +28,7 @@ There are direct benefits for researchers who publish their data. Data publicati
 
 (Source: Brian Hole, CC BY 4.0, [Slideshare](https://www.slideshare.net/brianhole/the-journal-of-open-archaeology-data-and-prime-incentivising-open-data-archiving))
 
- Additionally, there are benefits for the research community such as that new research is made possible and research is more efficient. Also, the public sector will profit by enhanced public trust in science as data publication allows for validation of research results. Nonetheless, there is an economic benefit of data publication if results can re reused by the private sector.
+ Additionally, there are benefits for the research community such as that new research is made possible and research is more efficient. Also the public sector will profit by enhanced public trust in science, as data publication allows for validation of research results.  Nonetheless, there is an economic benefit of data publication if results can re reused by the private sector.
 
 ## How to start
 
@@ -39,9 +39,9 @@ There are to main ways to publish research data:
 
 Field-specific repositories should be the first choice as these repositories enhance the FAIRness of data on behalf of the submitters. To retain the same level of FAIRness, data publication in generic repositories require manual FAIRification.
 
-[Smart Lab](/docs/smartlab) solutions, such as [Chemotion ELN](/docs/chemotion_eln/), can offer built-in workflows to assist researchers in publishing data. If the data is already documented in a structured way in Chemtotion ELN, then the data can also be published in this structured way via Chemotion Repository.
+[Smart Lab](/docs/smartlab) solutions, such as [Chemotion ELN](/docs/chemotion_eln/), can offer built-in workflows to assist researchers in publishing data. If the data is already documented in a structured way in Chemtotion ELN, then the data can also be published in this structured way via [Chemotion Repository](https://www.chemotion-repository.net/).
 
-A [Data Availability Statement](/docs/data_availability_statement) in the back matter of a manuscript communicates how the data has been shared and how it can be accessed by others. Datasets should be linked using [persistent identifiers](/docs/pid/). <!-- include more information on linking datasets to published article once we have best practice examples (De Gruyter pilot)-->
+A [Data Availability Statement](/docs/data_availability_statement) in the back matter of a manuscript communicates how the data has been shared and how it can be accessed by others. Datasets and scientific publications should be interlinked using [persistent identifiers](/docs/pid/). <!-- include more information on linking datasets to published article once we have best practice examples (De Gruyter pilot)-->
 
 :::danger Notice:  
 Still confused on how data publication in chemistry may look like? We do provide a consulting and data stewardship service via our [Lead by Example](/docs/lbe_intro/) project. Have a look at [Lead by Example Datasets](/docs/datasets) for one of NFDI4Chem's featured datasets!
