feat: added link to htctrc in data publication intro

--- a/docs/50_data_publication/00_data_publication.mdx
+++ b/docs/50_data_publication/00_data_publication.mdx
@@ -37,9 +37,13 @@ There are to main ways to publish research data:
 - publish data in a [research data repository](/docs/repositories/)
 - publish a separate [data article](/docs/data_articles/) with the corresponding dataset published in a [research data repository](/docs/repositories/)
 
-Field-specific repositories should be the first choice as these repositories enhance the FAIRness of data on behalf of the submitters. To retain the same level of FAIRness, data publication in generic repositories require manual FAIRification.
+:::info Info:
+Field-specific repositories should be the first choice as these repositories enhance the FAIRness of data on behalf of the submitters. To retain the same level of FAIRness, data publication in generic repositories require manual FAIRification. 
+:::
 
 [Smart Lab](/docs/smartlab) solutions, such as [Chemotion ELN](/docs/chemotion_eln/), can offer built-in workflows to assist researchers in publishing data. If the data is already documented in a structured way in Chemtotion ELN, then the data can also be published in this structured way via [Chemotion Repository](https://www.chemotion-repository.net/).
+
+Further information on other repositories including a list of recommended chemistry-friendly repositories is provided in our articles on [repositories](/docs/repositories) and guide on [how to choose the right repository](/docs/choose_repository).
 
 A [Data Availability Statement](/docs/data_availability_statement) in the back matter of a manuscript communicates how the data has been shared and how it can be accessed by others. Datasets and scientific publications should be interlinked using [persistent identifiers](/docs/pid/). <!-- include more information on linking datasets to published article once we have best practice examples (De Gruyter pilot)-->
 
@@ -52,4 +56,4 @@ Still confused on how data publication in chemistry may look like? We do provide
 - [The citation advantage of linking publications to research data](https://doi.org/10.1371/journal.pone.0230416)
 
 ----
-Main author: [ORCID:0000-0002-6243-2840](https://orcid.org/0000-0002-6243-2840) and [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661)
+Main authors: [ORCID:0000-0002-6243-2840](https://orcid.org/0000-0002-6243-2840) and [ORCID:0000-0003-4480-8661](https://orcid.org/0000-0003-4480-8661)
