fix: typos in URLs

--- a/docs/00_intro/00_intro.mdx
+++ b/docs/00_intro/00_intro.mdx
@@ -58,7 +58,7 @@ The handling data section explains common problems and challenges regarding RDM.
 
 To enable fully digital workflows in chemistry, the development and provision of a modular virtual laboratory environment with concepts, services and software (smartlab) is essential. Electronic lab notebooks are an important part of the smartlab, as well as integration of analytical instrumentation and data transfer to repositories.
 
-<IntroButton url={"/docs/smartlab"} imgUrl={"/img/nfdi4chem_Smartlab.svg"} text={"Smartlab"} />
+<IntroButton url={"/docs/smartlab"} imgUrl={"/img/nfdi4chem_SmartLab.svg"} text={"Smartlab"} />
 
 ### Data Publication
 
