--- a/docs/40_smartlab/00_smartlab.mdx
+++ b/docs/40_smartlab/00_smartlab.mdx
@@ -20,4 +20,4 @@ In this section, key components of the smart lab will be introduced to you.
 
 ## Get started:
 
-<IntroButton url={"/docs/eln"} imgUrl={"/img/nfdi4chem_Smartlab.svg"} text={"Electronic Lab Notebooks"} />
+<IntroButton url={"/docs/eln"} imgUrl={"/img/nfdi4chem_SmartLab.svg"} text={"Electronic Lab Notebooks"} />
