--- a/docs/50_data_publication/00_data_publication.mdx
+++ b/docs/50_data_publication/00_data_publication.mdx
@@ -32,7 +32,7 @@ There are direct benefits for researchers who publish their data. Data publicati
 
 ## How to start
 
-There are to main ways to publish research data:
+There are two main ways to publish research data:
 
 - publish data in a [research data repository](/docs/repositories/)
 - publish a separate [data article](/docs/data_articles/) with the corresponding dataset published in a [research data repository](/docs/repositories/)
