fix: misc broken links

--- a/docs/50_data_publication/50_data_articles.mdx
+++ b/docs/50_data_publication/50_data_articles.mdx
@@ -19,7 +19,7 @@ Several journals have added some form of data articles to their article types. M
 
 The first step is to determine whether the data set(s) meet the criteria to pass the review process of the journals. In case the data shall be published in conjunction with an original research article, it has to be determined whether the editorial policy is compatible with a separate data publication. Here, the author guidelines or a brief email to the editorial contact can provide an answer. 
 
-Data articles usually consist of a manuscript describing the scientific background and a detailed description of materials and methods used, and links to one or more FAIR datasets published in a [research data repositories](/docs/repositories/) via their [PID](/docs/PID/)s. The applied quality control measures can be emphasised in the article, and potential reuse could be explained. 
+Data articles usually consist of a manuscript describing the scientific background and a detailed description of materials and methods used, and links to one or more FAIR datasets published in a [research data repositories](/docs/repositories/) via their [PID](/docs/pid/)s. The applied quality control measures can be emphasised in the article, and potential reuse could be explained. 
 
 Together, the deposited FAIR dataset and the citable peer-reviewed data manuscript give the data the credits it deserves. 
 
