--- a/docs/60_topics/63_data_description_annotation/00_data_description_annotation.mdx
+++ b/docs/60_topics/63_data_description_annotation/00_data_description_annotation.mdx
@@ -8,7 +8,7 @@ id: "data_description_annotation"
 
 To best understand a dataset at hand, whether it be for yourself, your working group, or others in the scientific community, it must be clearly described. To this end, data annotation and data description are both important aspects of data management and analysis and enable reuse of research data. 
 
-Data description involves providing a detailed overview of the data, including its characteristics, format, structure, and any relevant context. Research data annotation is the process of adding labels or notes to data to make it more easily understandable and accessible for analysis. In using rich machine-readable [metadata](docs/metadata), data annotation and description allows both humans and machines to make informed decisions about the suitability of the data for their research.
+Data description involves providing a detailed overview of the data, including its characteristics, format, structure, and any relevant context. Research data annotation is the process of adding labels or notes to data to make it more easily understandable and accessible for analysis. In using rich machine-readable [metadata](/docs/metadata), data annotation and description allows both humans and machines to make informed decisions about the suitability of the data for their research.
 
 Another aspect to consider is allow for data reuse is [data provenance](/docs/provenance), which can be part of the metadata. In the context of scientific data and data management, provenance means the documentation of where data material comes from and with which processes and methods it was produced. Hence, the concept of provenance is about trust, credibility and reproducibility of research and may include information such as creation date, persons creating, instruments used, software used and data processing methods applied.   
 
