--- a/docs/20_role/40_data_steward.mdx
+++ b/docs/20_role/40_data_steward.mdx
@@ -29,7 +29,7 @@ Recently, a [BMBF](https://www.bmbf.de/bmbf/de/home/home_node.html)-funded proje
 
 ### Data Stewards in Chemistry
 
-Chemical research is often a combination of observational data and digital data. While the focus in RDM and data stewardship typically lies on the latter—as emphasized in the definition quoted at the beginning of this article—the oberservational aspect cannot be ignored. Traditionally, this information is recorded in hand-written lab journals. Here, data stewards must understand the type of laboratory work carried out and assist in selecting appropriate ELNs to digitize this type of information. For digital data, data stewards must be aware of community-specific standards for data formats and [minimum information (MI) regarding metadata](/docs/metadata) . With this knowledge, they can assist in efficiently implementing data workflows that automate data transfer from device to secure storage locations, data format conversions, and metadata annotation. For example, [Chemotion ELN's device integration](https://www.chemotion.net/chemotionsaurus/docs/device-integration) can facilitate such workflows, while directly connecting the data to molecules and reactions recorded in the ELN. Such processes allow for a well-documented [dataset to be published](/docs/data_publication) in [repositories](/docs/repositories) alongside the results reported in journal articles.
+Chemical research is often a combination of observational data and digital data. While the focus in RDM and data stewardship typically lies on the latter—as emphasized in the definition quoted at the beginning of this article—the oberservational aspect cannot be ignored. Traditionally, this information is recorded in hand-written lab journals. Here, data stewards must understand the type of laboratory work carried out and assist in selecting appropriate ELNs to digitize this type of information. For digital data, data stewards must be aware of community-specific standards for data formats and [minimum information (MI) regarding metadata](/docs/metadata) . With this knowledge, they can assist in efficiently implementing data workflows that automate data transfer from device to secure storage locations, data format conversions, and metadata annotation. For example, [Chemotion ELN's device integration](https://www.chemotion.net/docs/eln/devices) can facilitate such workflows, while directly connecting the data to molecules and reactions recorded in the ELN. Such processes allow for a well-documented [dataset to be published](/docs/data_publication) in [repositories](/docs/repositories) alongside the results reported in journal articles.
 
 ## Networking and Continuous Training
 
