--- a/docs/40_smartlab/20_chemotion_eln.mdx
+++ b/docs/40_smartlab/20_chemotion_eln.mdx
@@ -23,7 +23,7 @@ A short introduction to the Chemotion ELN as well as the connection to the Chemo
 
 ### Documentation, information, and contact
 
-Chemotion ELN and its functions were described in various publications (see [below](#sources-and-further-information)). For users, developers, and admins, a documentation is available via the project's [website](https://www.chemotion.net/chemotionsaurus/docs/intro). Chemotion ELN is an Open Source development; the source code is available on [GitHub](https://github.com/ComPlat/chemotion_ELN).
+Chemotion ELN and its functions were described in various publications (see [below](#sources-and-further-information)). For users, developers, and admins, a documentation is available via the project's [website](https://www.chemotion.net/docs). Chemotion ELN is an Open Source development; the source code is available on [GitHub](https://github.com/ComPlat/chemotion_ELN).
 
 ## Other Electronic Lab Notebooks
 There are a plethora of ELNs available and it is not always easy to figure out which is the right one for you. To help you choose an ELN, you can use the [ELN Finder](https://eln-finder.ulb.tu-darmstadt.de/home). Here, more than 40 filter criteria are available. Filter criteria are clearly divided into categories and the result list of the identified ELN tools are displayed in an overview alongside Brief descriptions of the individual tools.
